[gd_scene load_steps=4 format=3 uid="uid://cupm3r3yhcopw"]

[ext_resource type="Script" path="res://ui/screen_components/class_picker_component/class_picker_component.gd" id="1_wcylv"]
[ext_resource type="PackedScene" uid="uid://cjure0eqqc6lc" path="res://scenes/game_objects/cards/card_back/card_back.tscn" id="1_xi1cm"]
[ext_resource type="Theme" uid="uid://dmot8ul1c5l3n" path="res://assets/themes/theme_1.tres" id="2_gnh5p"]

[node name="ClassPickerComponent" type="VBoxContainer"]
script = ExtResource("1_wcylv")
title = "Great Sword"

[node name="CardBack" parent="." instance=ExtResource("1_xi1cm")]
layout_mode = 2

[node name="Title" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_gnh5p")
text = "Great Sword"
horizontal_alignment = 1

[connection signal="gui_input" from="CardBack" to="." method="_on_card_back_gui_input"]
